Day 1 - Header + Courses

--- a/index.html
+++ b/index.html
@@ -6,8 +6,140 @@
         <title>F8 Project 02</title>
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
     </head>
-    <body>
-        Hello TGC WillotE
+    <body style="height: 10000px">
+        <header class="header">
+            <div class="content">
+                <div class="nav">
+                    <img src="./assets/img/logo.svg" alt="Lesson." />
+
+                    <div class="nav-info">
+                        <ul class="nav-list">
+                            <li>
+                                <a href="#!">Home</a>
+                            </li>
+                            <li>
+                                <a href="#!">Courses</a>
+                            </li>
+                            <li>
+                                <a href="#!">Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Reviews</a>
+                            </li>
+                        </ul>
+                        <button class="cta">Sign Up</button>
+                    </div>
+                </div>
+
+                <div class="hero">
+                    <div class="hero-img">
+                        <img
+                            src="./assets/img/cute kitty.jpg"
+                            alt="1"
+                            class="main-img"
+                        />
+                    </div>
+                    <div class="hero-desc">
+                        <div class="above-info">
+                            <h1>Learn without limits and spread knowledge.</h1>
+                            <p>
+                                Build new skills for that “this is my year”
+                                feeling with courses, certificates, and degrees
+                                from world-class universities and companies.
+                            </p>
+                        </div>
+                        <div class="cta-form">
+                            <button class="cta">See courses</button>
+                            <img src="./assets/img/play.svg" alt="1" />
+                            <p>Watch Video</p>
+                        </div>
+                        <div class="desc-stat">
+                            <p>Recent engagement</p>
+                            <div class="row">
+                                <div class="sub-stat">
+                                    <p class="sub1">50K</p>
+                                    <p class="sub2">Students</p>
+                                </div>
+                                <div class="sub-stat">
+                                    <p class="sub1">70+</p>
+                                    <p class="sub2">Courses</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <div class="courses">
+            <div class="content">
+                <div class="courses-title">
+                    <div class="courses-info">
+                        <h2>Our popular courses</h2>
+                        <p>
+                            Build new skills with new trendy courses and shine
+                            for the next future career.
+                        </p>
+                    </div>
+                    <div class="courses-img">
+                        <img src="./assets/img/Icons.svg" alt="1" />
+                    </div>
+                </div>
+                <div class="courses-list">
+                    <div class="courses-items">
+                        <img src="./assets/img/cat1.jpg" alt="1" class="img" />
+                        <div class="courses-text">
+                            <div class="row">
+                                <h3>Basic web design</h3>
+                                <img src="./assets/img/Rating.svg" alt="1" />
+                            </div>
+                            <p class="desc">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </p>
+                            <div class="courses-end">
+                                <p>$120.75</p>
+                                <button class="cta">Book Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="courses-items">
+                        <img src="./assets/img/cat2.jpg" alt="1" class="img" />
+                        <div class="courses-text">
+                            <div class="row">
+                                <h3>UI/UX design</h3>
+                                <img src="./assets/img/Rating.svg" alt="1" />
+                            </div>
+                            <p class="desc">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </p>
+                            <div class="courses-end">
+                                <p>$120.75</p>
+                                <button class="cta">Book Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="courses-items">
+                        <img src="./assets/img/cat3.jpg" alt="1" class="img" />
+                        <div class="courses-text">
+                            <div class="row">
+                                <h3>Web App design</h3>
+                                <img src="./assets/img/Rating.svg" alt="1" />
+                            </div>
+                            <p class="desc">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </p>
+                            <div class="courses-end">
+                                <p>$120.75</p>
+                                <button class="cta">Book Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
