--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
         <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
     </head>
-    <body style="height: 10000px">
+    <body>
         <header class="header">
             <div class="content">
                 <div class="nav">
@@ -40,6 +40,44 @@
                             alt="1"
                             class="main-img"
                         />
+                        <div class="hero-summary">
+                            <div class="item">
+                                <div class="icon">
+                                    <img
+                                        src="./assets/img/Orion_page.svg"
+                                        alt=""
+                                    />
+                                </div>
+                                <div class="info">
+                                    <p class="label">20 Courses</p>
+                                    <p class="title">UI/UX Design</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="icon">
+                                    <img
+                                        src="./assets/img/Orion_code-window.svg"
+                                        alt=""
+                                    />
+                                </div>
+                                <div class="info">
+                                    <p class="label">20 Courses</p>
+                                    <p class="title">Development</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="icon">
+                                    <img
+                                        src="./assets/img/Orion_megaphone.svg"
+                                        alt=""
+                                    />
+                                </div>
+                                <div class="info">
+                                    <p class="label">30 Courses</p>
+                                    <p class="title">Marketing</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="hero-desc">
                         <div class="above-info">
@@ -122,7 +160,11 @@
                         </div>
                     </div>
                     <div class="courses-items">
-                        <img src="./assets/img/cat3.jpg" alt="1" class="img" />
+                        <img
+                            src="./assets/img/kitty7.jpg"
+                            alt="1"
+                            class="img"
+                        />
                         <div class="courses-text">
                             <div class="row">
                                 <h3>Web App design</h3>
@@ -141,5 +183,204 @@
                 </div>
             </div>
         </div>
+        <div class="comment">
+            <div class="content">
+                <div class="response">
+                    <div class="customer">
+                        <img
+                            src="./assets/img/kitty.jpg"
+                            alt="1"
+                            class="avatar"
+                        />
+                        <p class="name">Peter Moor</p>
+                        <p>Student of Web Design</p>
+                        <img src="./assets/img/Group.svg" alt="1" class="img" />
+                    </div>
+                    <div class="cmt">
+                        <img src="./assets/img/Vector.svg" alt="1" />
+                        <p>
+                            Not only does my resume look impressive—filled with
+                            the names and logos of world-class institutions—but
+                            these certificates also bring me closer to my career
+                            goals by validating the skills I've learned."
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="features">
+            <div class="content">
+                <div class="main-features">
+                    <div class="features-img">
+                        <img
+                            src="./assets/img/kitty4.jpg"
+                            alt="1"
+                            class="cat1"
+                        />
+                        <img
+                            src="./assets/img/kitty5.jpg"
+                            alt="1"
+                            class="cat2"
+                        />
+                    </div>
+                    <div class="features-info">
+                        <h2>Learner outcomes through our awesome platform</h2>
+                        <p>
+                            87% of people learning for professional development
+                            report career benefits like getting a promotion, a
+                            raise, or starting a new career.
+                        </p>
+                        <p>Lesson Impact Report (2022)</p>
+                        <button class="cta">Sign Up</button>
+                    </div>
+                </div>
+                <div class="sub-features">
+                    <div class="features-info">
+                        <h2 style="width: 570px">
+                            Take the next step toward your personal and
+                            professional goals with Lesson.
+                        </h2>
+                        <p>
+                            Take the next step toward. Join now to receive
+                            personalized and more recommendations from the full
+                            Coursera catalog.
+                        </p>
+                        <button class="cta">Join Now</button>
+                    </div>
+                    <div class="features-img">
+                        <img src="./assets/img/kitty6.jpg" alt="1" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="blog">
+            <div class="content">
+                <div class="blog-container">
+                    <div class="blog-title">
+                        <h2>Our blog</h2>
+                        <p>
+                            Read our regular travel blog and know the latest
+                            update of tour and travel
+                        </p>
+                    </div>
+                    <div class="blog-list">
+                        <div class="item">
+                            <img src="./assets/img/kitty2.jpg" alt="" />
+                            <div class="item-desc">
+                                <p>21 November 2021</p>
+                                <h3>
+                                    How to become a pro web designer in 2022 and
+                                    get remote job?
+                                </h3>
+                                <button class="cta">Read more</button>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="./assets/img/kitty3.jpg" alt="" />
+                            <div class="item-desc">
+                                <p>21 November 2021</p>
+                                <h3>
+                                    How to become a pro web designer in 2022 and
+                                    get remote job?
+                                </h3>
+                                <button class="cta">Read more</button>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="./assets/img/kitty8.jpg" alt="" />
+                            <div class="item-desc">
+                                <p>21 November 2021</p>
+                                <h3>
+                                    How to become a pro web designer in 2022 and
+                                    get remote job?
+                                </h3>
+                                <button class="cta">Read more</button>
+                            </div>
+                        </div>
+                    </div>
+                    <img src="./assets/img/Group.svg" alt="1" class="icon" />
+                </div>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="content">
+                <div class="above-info">
+                    <div class="row">
+                        <div class="first-column">
+                            <img
+                                src="./assets/img/white-logo.svg"
+                                alt="Lesson"
+                            />
+                            <p>
+                                Need to help for your dream Career? trust us.
+                                With Lesson, study becomes a lot easier with us.
+                            </p>
+                            <img src="./assets/img/Social.svg" alt="1" />
+                        </div>
+                        <div class="another-column">
+                            <h3>Company</h3>
+                            <hr />
+                            <ul>
+                                <li>
+                                    <a href="#!">About Us</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Features</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Our Pricing</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Latest News</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="another-column">
+                            <h3>Support</h3>
+                            <hr />
+                            <ul>
+                                <li>
+                                    <a href="#!">FAQ's</a>
+                                </li>
+                                <li style="width: 137px">
+                                    <a href="#!">Terms & Conditions</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Privacy Policy</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Contact Us</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="another-column">
+                            <h3>Address</h3>
+                            <hr />
+                            <ul>
+                                <li style="width: 231px">
+                                    <a href="#!"
+                                        ><span>Location: </span>27 Division St,
+                                        New York, NY 10002, USA</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="#!"
+                                        ><span>Email: </span
+                                        >LuongPhucNguyen9999@gmail.com</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="#!"
+                                        ><span>Phone: </span>+84 935825774
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <hr class="seperate" />
+                <p class="end">Designed by Liang Fu Yuan</p>
+            </div>
+        </footer>
     </body>
 </html>
